--- a/.github/workflow/docker-publish.yml
+++ b/.github/workflow/docker-publish.yml
@@ -19,7 +19,7 @@ jobs:
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
       # 3. Faz a build e o push da imagem
       - name: Build e push da imagem da API
