--- a/deployment.yaml
+++ b/deployment.yaml
@@ -65,14 +65,18 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: api-service # Este é o nome que o Frontend usará
+  name: api-service
 spec:
+  # 1. Mude o tipo para expor o serviço para fora
+  type: NodePort
   selector:
     app: api
   ports:
     - protocol: TCP
-      port: 5000 # A porta que o serviço expõe
-      targetPort: 5000 # A porta do contêiner da API
+      port: 5000
+      targetPort: 5000
+      # 2. Defina uma porta fixa para o acesso externo
+      nodePort: 30002
 
 ---
 # --- Configuração do Frontend ---
